--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
     .finished path {transition: fill-opacity 0.7s, stroke-opacity 0.3s;}
   }
   </style>
-  <link rel="stylesheet" href="../css/reset-min.css"  type="text/css" media="screen">
+  <link rel="stylesheet" href="../css/reset.css"  type="text/css" media="screen">
   <link rel="stylesheet" href="../css/b-common.css"  type="text/css" media="screen">
   <link rel="stylesheet" href="../css/company.css"  type="text/css"  media="print" onload="this.media='all'">
 
