--- a/index.html
+++ b/index.html
@@ -125,9 +125,9 @@
     .finished path {transition: fill-opacity 0.7s, stroke-opacity 0.3s;}
   }
   </style>
-  <link rel="stylesheet" href="../css/reset.css"  type="text/css" media="screen">
-  <link rel="stylesheet" href="../css/b-common.css"  type="text/css" media="screen">
-  <link rel="stylesheet" href="../css/company.css"  type="text/css"  media="print" onload="this.media='all'">
+  <link rel="stylesheet" href="../css/reset.css"  type="text/css">
+  <link rel="stylesheet" href="../css/b-common.css"  type="text/css" >
+  <link rel="stylesheet" href="../css/company.css"  type="text/css" >
 
   <script type="application/ld+json">
   {
