--- a/index.html
+++ b/index.html
@@ -125,9 +125,9 @@
     .finished path {transition: fill-opacity 0.7s, stroke-opacity 0.3s;}
   }
   </style>
-  <link rel="stylesheet" href="../css/reset.css"  type="text/css">
-  <link rel="stylesheet" href="../css/b-common.css"  type="text/css" >
-  <link rel="stylesheet" href="../css/company.css"  type="text/css" >
+  <link rel="stylesheet" href="./css/reset.css"  type="text/css">
+  <link rel="stylesheet" href="./css/b-common.css"  type="text/css" >
+  <link rel="stylesheet" href="./css/company.css"  type="text/css" >
 
   <script type="application/ld+json">
   {
@@ -587,8 +587,8 @@
     <script src="https://kit.fontawesome.com/245704263b.js" crossorigin="anonymous" defer></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js" ></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/velocity/1.1.0/velocity.min.js"></script>
-    <script src="../js/jquery.wipeSlider.js"></script>
-    <script src="../js/company.js" defer></script>
+    <script src="./js/jquery.wipeSlider.js"></script>
+    <script src="./js/company.js" defer></script>
     <script>
     $(window).on('load', function(){
     	$('.js_wiper').wipeSlider({
