--- a/index.html
+++ b/index.html
@@ -277,31 +277,31 @@
             <ul class="slides">
             	<li class="slide" data-dir="toTop">
                 <picture>
-                  <source media="(max-width:420px)" srcset="../imgs/image/viewSp3-min.jpg">
+                  <source media="(max-width:420px)" srcset="./image/viewSp3-min.jpg">
                   <img src="../imgs/image/view3-min.jpg" alt="" loading="lazy" decoding="async">
                 </picture>
               </li>
             	<li class="slide" data-dir="toTop">
                 <picture>
-                  <source media="(max-width:420px)" srcset="../imgs/image/viewSp6-min.jpg">
+                  <source media="(max-width:420px)" srcset="./image/viewSp6-min.jpg">
                   <img src="../imgs/image/view6-min.jpg" alt="" loading="lazy" decoding="async">
                 </picture>
               </li>
             	<li class="slide" data-dir="toTop">
                 <picture>
-                  <source media="(max-width:420px)" srcset="../imgs/image/viewSp7-min.jpg">
+                  <source media="(max-width:420px)" srcset="./image/viewSp7-min.jpg">
                   <img src="../imgs/image/view7-min.jpg" alt="" loading="lazy" decoding="async">
                 </picture>
               </li>
             	<li class="slide" data-dir="toTop">
                 <picture>
-                  <source media="(max-width:420px)" srcset="../imgs/image/viewSp8-min.jpg">
+                  <source media="(max-width:420px)" srcset="./image/viewSp8-min.jpg">
                   <img src="../imgs/image/view8-min.jpg" alt="" loading="lazy" decoding="async">
                 </picture>
               </li>
               <li class="slide" data-dir="toTop">
                 <picture>
-                  <source media="(max-width:420px)" srcset="../imgs/image/viewSp11-min.jpg">
+                  <source media="(max-width:420px)" srcset="./image/viewSp11-min.jpg">
                   <img src="../imgs/image/view11-min.jpg" alt="" loading="lazy" decoding="async">
                 </picture>
               </li>
